@@ -1,5 +1,12 @@
 2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Autodetect platform in grub-install but allow override.
+
+	* util/grub-install.in: Autodetect platform. Support --target and
+	--directory. Read platform from modinfo.sh.
+
+2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Support btrfs multi-volume probe.
 
 	* util/getroot.c (btrfs_ioctl_dev_info_args) [__linux__]: New struct.
